kubernetes/apps/media/jellyfin/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media
              mountPath: /medias
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.8.1
          args:
            - --provider=oidc
            - --oidc-issuer-url=https://id.kalitsune.net
            - --redirect-url=https://watch.kalitsune.net/oauth2/callback
            - --upstream=http://127.0.0.1:8096
            - --http-address=0.0.0.0:4180
            - --email-domain=*
            - --cookie-secure=true
            - --cookie-name=_oauth2_proxy_jellyfin
            - --session-store-type=cookie
            - --banner=-
            - --skip-provider-button=true
            - --code-challenge-method=S256
          ports:
            - containerPort: 4180
              name: proxy
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: cache
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: media-storage
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  selector:
    app: jellyfin
  ports:
    - port: 4180
      targetPort: 4180
      name: proxy
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  parentRefs:
    - name: apps
      namespace: envoy-gateway-system
  hostnames:
    - watch.kalitsune.net
  rules:
    - backendRefs:
        - name: jellyfin
          port: 4180
